# ocaml-base64

bench/: dune
fuzz/: dune
src/: base32.ml  base32.mli  base64.ml  dune
test/: dune  test32.ml
